<resources>
    <string name="app_name">Mausam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="degree">&#xb0;</string>
    <string name="today">Today</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="c">C</string>
    <string name="f">F</string>
    <string name="unit">Unit</string>
    <string name="zip">Zip</string>
    <string name="zip_code_required">Zip Code Required!</string>
    <string name="save">Save</string>
    <string name="no_internet_connection">No internet connection !</string>
    <string name="tomorrow">Tomorrow / 5 days</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_zip_code">Are you sure you want to change Zip code ?</string>
    <string name="please_enter_zip_code">Please enter a zip code to get the weather forecast.</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="loading_data">Please Wait !</string>
    <string name="refresh">Refresh</string>
</resources>
