<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="32dp"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/please_enter_zip_code"
        android:textColor="@color/colorGrey"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/no_internet_connection"
        android:textColor="@color/colorWarm"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWarm"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">


                <EditText
                    android:id="@+id/et_zip_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/enter_zip_code"
                    android:inputType="number"
                    android:paddingBottom="18dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />

            </android.support.design.widget.TextInputLayout>

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--android:text="@string/unit"-->
                <!--android:textColor="@color/colorWhite"-->
                <!--android:textSize="16sp"-->
                <!--android:textStyle="bold" />-->

            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/c"-->
                    <!--android:textColor="@color/colorWhite"-->
                    <!--android:textSize="14sp"-->
                    <!--android:textStyle="bold" />-->

                <!--<Switch-->
                    <!--android:id="@+id/tb_unit"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_marginStart="8dp"-->
                    <!--android:layout_marginEnd="8dp" />-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/f"-->
                    <!--android:textColor="@color/colorWhite"-->
                    <!--android:textSize="14sp"-->
                    <!--android:textStyle="bold" />-->

            <!--</LinearLayout>-->

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>
